--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -89,7 +90,58 @@ Image to analyze: <input type="text" name="inputImage" id="inputImage"
             });
     };
 </script>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<div>
+
+
+    <h1>Cargar Imagen a Azure Blob Storage</h1>
+    
+    <form id="uploadForm" enctype="multipart/form-data">
+        <input type="file" id="imageInput" accept="image/*" required>
+        <button type="button" onclick="uploadImage()">Cargar Imagen</button>
+    </form>
+
+
+
+</div>
 </body>
+<script>
+    async function uploadImage() {
+        const fileInput = document.getElementById('imageInput');
+        const file = fileInput.files[0];
+        const blobName = file.name;
+
+        const containerName = 'facestorage';
+        const blobServiceUrl = `https://facefinderstorageproject.blob.core.windows.net`;
+
+        const blobUrl = `${blobServiceUrl}/${containerName}/${blobName}`;
+
+        try {
+            const response = await fetch(blobUrl, {
+                method: 'PUT',
+                headers: {
+                    'Content-Type': file.type
+                },
+                body: file
+            });
+
+            if (response.ok) {
+                alert('Imagen cargada con éxito');
+            } else {
+                throw new Error('Error al cargar la imagen');
+            }
+        } catch (error) {
+            console.error(error);
+            alert('Error al cargar la imagen');
+        }
+    }
+</script>
 </html>
 
 
