--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ Image to analyze: <input type="text" name="inputImage" id="inputImage"
 
 </div>
 </body>
-<script src = "index.js"></script>
+<script type="module" src="index.js"></script>
 </html>
 
 
