--- a/index.html
+++ b/index.html
@@ -26,139 +26,74 @@ Image to analyze: <input type="text" name="inputImage" id="inputImage"
 
 <script>
     async function sendUrlToCosmosDB(url) {
-        try {
-            const response = await fetch('/api/createEntry', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({ url })
-            });
+      try {
+        const response = await fetch('/api/createEntry', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify({ url })
+        });
 
-            if (response.ok) {
-                const result = await response.json();
-                console.log('URL sent to Cosmos DB:', result);
-            } else {
-                throw new Error('Failed to send URL to Cosmos DB');
-            }
-        } catch (error) {
-            console.error(error);
+        if (response.ok) {
+          const result = await response.json();
+          console.log('URL sent to Cosmos DB:', result);
+        } else {
+          throw new Error('Failed to send URL to Cosmos DB');
         }
+      } catch (error) {
+        console.error(error);
+      }
     }
 
     function processImage() {
-        var subscriptionKey = "1c8a0938df024623a98b21251f299565";
-        var uriBase =
-            "https://feelfinderai.cognitiveservices.azure.com/face/v1.0/detect";
+      var subscriptionKey = "1c8a0938df024623a98b21251f299565";
+      var uriBase =
+          "https://feelfinderai.cognitiveservices.azure.com/face/v1.0/detect";
 
-        // Request parameters.
-        var params = {
-            "detectionModel": "detection_03",
-            "returnFaceId": "true"
-        };
+      var params = {
+          "detectionModel": "detection_03",
+          "returnFaceId": "true"
+      };
 
-        // Display the image.
-        var sourceImageUrl = document.getElementById("inputImage").value;
-        document.querySelector("#sourceImage").src = sourceImageUrl;
+      var sourceImageUrl = document.getElementById("inputImage").value;
+      document.querySelector("#sourceImage").src = sourceImageUrl;
 
-        // Perform the REST API call.
-        $.ajax({
-            url: uriBase + "?" + $.param(params),
+      $.ajax({
+          url: uriBase + "?" + $.param(params),
+          beforeSend: function (xhrObj) {
+              xhrObj.setRequestHeader("Content-Type", "application/json");
+              xhrObj.setRequestHeader("Ocp-Apim-Subscription-Key", subscriptionKey);
+          },
+          type: "POST",
+          data: '{"url": ' + '"' + sourceImageUrl + '"}',
+      })
+      .done(function (data) {
+          $("#responseTextArea").val(JSON.stringify(data, null, 2));
 
-            // Request headers.
-            beforeSend: function (xhrObj) {
-                xhrObj.setRequestHeader("Content-Type", "application/json");
-                xhrObj.setRequestHeader("Ocp-Apim-Subscription-Key", subscriptionKey);
-            },
+          var canvas = document.getElementById("canvas");
+          var context = canvas.getContext("2d");
+          context.clearRect(0, 0, canvas.width, canvas.height);
+          var img = document.getElementById('sourceImage');
+          canvas.width = img.width*2;
+          canvas.height = img.height*2;
+          context.drawImage(img, 0, 0);
+          context.strokeStyle = 'red';
+          context.lineWidth = 2;
+          data.forEach(function (face) {
+              var faceRectangle = face.faceRectangle;
+              context.beginPath();
+              context.rect(faceRectangle.left, faceRectangle.top, faceRectangle.width, faceRectangle.height);
+              context.stroke();
+          });
 
-            type: "POST",
-
-            // Request body.
-            data: '{"url": ' + '"' + sourceImageUrl + '"}',
-        })
-
-        .done(function (data) {
-            // Show formatted JSON on webpage.
-            $("#responseTextArea").val(JSON.stringify(data, null, 2));
-
-            // Draw rectangles around detected faces
-            var canvas = document.getElementById("canvas");
-            var context = canvas.getContext("2d");
-            context.clearRect(0, 0, canvas.width, canvas.height);
-            var img = document.getElementById('sourceImage');
-            canvas.width = img.width*2;
-            canvas.height = img.height*2;
-            context.drawImage(img, 0, 0);
-            context.strokeStyle = 'red';
-            context.lineWidth = 2;
-            data.forEach(function (face) {
-                var faceRectangle = face.faceRectangle;
-                context.beginPath();
-                context.rect(faceRectangle.left, faceRectangle.top, faceRectangle.width, faceRectangle.height);
-                context.stroke();
-            });
-
-            // Send URL to Cosmos DB
-            sendUrlToCosmosDB(sourceImageUrl);
-        })
-
-        .fail(function (jqXHR, textStatus, errorThrown) {
-            // Display error message.
-            var errorString = (errorThrown === "") ?
-                "Error. " : errorThrown + " (" + jqXHR.status + "): ";
-            errorString += (jqXHR.responseText === "") ?
-                "" : (jQuery.parseJSON(jqXHR.responseText).message) ?
-                    jQuery.parseJSON(jqXHR.responseText).message :
-                    jQuery.parseJSON(jqXHR.responseText).error.message;
-            alert(errorString);
-        });
-    }
-</script>
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<div>
-    <h1>Cargar Imagen a Azure Blob Storage</h1>
-    <form id="uploadForm" enctype="multipart/form-data">
-        <input type="file" id="imageInput" accept="image/*" required>
-        <button type="button" onclick="uploadImage()">Cargar Imagen</button>
-    </form>
-</div>
-
-<script>
-    async function uploadImage() {
-        const fileInput = document.getElementById('imageInput');
-        const file = fileInput.files[0];
-        const blobName = file.name;
-
-        const containerName = 'facestorage';
-        const blobServiceUrl = `https://facefinderstorageproject.blob.core.windows.net`;
-
-        const blobUrl = `${blobServiceUrl}/${containerName}/${blobName}`;
-
-        try {
-            const response = await fetch(blobUrl, {
-                method: 'PUT',
-                headers: {
-                    'Content-Type': file.type
-                },
-                body: file
-            });
-
-            if (response.ok) {
-                alert('Imagen cargada con éxito');
-            } else {
-                throw new Error('Error al cargar la imagen');
-            }
-        } catch (error) {
-            console.error(error);
-            alert('Error al cargar la imagen');
-        }
+          sendUrlToCosmosDB(sourceImageUrl);
+      })
+      .fail(function (jqXHR, textStatus, errorThrown) {
+          var errorString = (errorThrown === "") ? "Error. " : errorThrown + " (" + jqXHR.status + "): ";
+          errorString += (jqXHR.responseText === "") ? "" : (jQuery.parseJSON(jqXHR.responseText).message) ? jQuery.parseJSON(jqXHR.responseText).message : jQuery.parseJSON(jqXHR.responseText).error.message;
+          alert(errorString);
+      });
     }
 </script>
 </body>
