--- a/index.html
+++ b/index.html
@@ -25,75 +25,75 @@ Image to analyze: <input type="text" name="inputImage" id="inputImage"
 </div>
 
 <script>
-    async function sendUrlToCosmosDB(url) {
-      try {
-        const response = await fetch('/api/createEntry', {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json'
-          },
-          body: JSON.stringify({ url })
-        });
+    async function sendDataToCosmosDB(url) {
+        try {
+            const response = await fetch('/api/createEntry', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({ url })
+            });
 
-        if (response.ok) {
-          const result = await response.json();
-          console.log('URL sent to Cosmos DB:', result);
-        } else {
-          throw new Error('Failed to send URL to Cosmos DB');
+            if (response.ok) {
+                const result = await response.json();
+                console.log('URL sent to Cosmos DB:', result);
+            } else {
+                throw new Error('Failed to send URL to Cosmos DB');
+            }
+        } catch (error) {
+            console.error(error);
+            alert('Error sending URL to Cosmos DB');
         }
-      } catch (error) {
-        console.error(error);
-      }
     }
 
     function processImage() {
-      var subscriptionKey = "1c8a0938df024623a98b21251f299565";
-      var uriBase =
-          "https://feelfinderai.cognitiveservices.azure.com/face/v1.0/detect";
+        var subscriptionKey = "1c8a0938df024623a98b21251f299565";
+        var uriBase = "https://feelfinderai.cognitiveservices.azure.com/face/v1.0/detect";
 
-      var params = {
-          "detectionModel": "detection_03",
-          "returnFaceId": "true"
-      };
+        var params = {
+            "detectionModel": "detection_03",
+            "returnFaceId": "true"
+        };
 
-      var sourceImageUrl = document.getElementById("inputImage").value;
-      document.querySelector("#sourceImage").src = sourceImageUrl;
+        var sourceImageUrl = document.getElementById("inputImage").value;
+        document.querySelector("#sourceImage").src = sourceImageUrl;
 
-      $.ajax({
-          url: uriBase + "?" + $.param(params),
-          beforeSend: function (xhrObj) {
-              xhrObj.setRequestHeader("Content-Type", "application/json");
-              xhrObj.setRequestHeader("Ocp-Apim-Subscription-Key", subscriptionKey);
-          },
-          type: "POST",
-          data: '{"url": ' + '"' + sourceImageUrl + '"}',
-      })
-      .done(function (data) {
-          $("#responseTextArea").val(JSON.stringify(data, null, 2));
+        $.ajax({
+            url: uriBase + "?" + $.param(params),
+            beforeSend: function (xhrObj) {
+                xhrObj.setRequestHeader("Content-Type", "application/json");
+                xhrObj.setRequestHeader("Ocp-Apim-Subscription-Key", subscriptionKey);
+            },
+            type: "POST",
+            data: '{"url": ' + '"' + sourceImageUrl + '"}',
+        })
+        .done(function (data) {
+            $("#responseTextArea").val(JSON.stringify(data, null, 2));
 
-          var canvas = document.getElementById("canvas");
-          var context = canvas.getContext("2d");
-          context.clearRect(0, 0, canvas.width, canvas.height);
-          var img = document.getElementById('sourceImage');
-          canvas.width = img.width*2;
-          canvas.height = img.height*2;
-          context.drawImage(img, 0, 0);
-          context.strokeStyle = 'red';
-          context.lineWidth = 2;
-          data.forEach(function (face) {
-              var faceRectangle = face.faceRectangle;
-              context.beginPath();
-              context.rect(faceRectangle.left, faceRectangle.top, faceRectangle.width, faceRectangle.height);
-              context.stroke();
-          });
+            var canvas = document.getElementById("canvas");
+            var context = canvas.getContext("2d");
+            context.clearRect(0, 0, canvas.width, canvas.height);
+            var img = document.getElementById('sourceImage');
+            canvas.width = img.width*2;
+            canvas.height = img.height*2;
+            context.drawImage(img, 0, 0);
+            context.strokeStyle = 'red';
+            context.lineWidth = 2;
+            data.forEach(function (face) {
+                var faceRectangle = face.faceRectangle;
+                context.beginPath();
+                context.rect(faceRectangle.left, faceRectangle.top, faceRectangle.width, faceRectangle.height);
+                context.stroke();
+            });
 
-          sendUrlToCosmosDB(sourceImageUrl);
-      })
-      .fail(function (jqXHR, textStatus, errorThrown) {
-          var errorString = (errorThrown === "") ? "Error. " : errorThrown + " (" + jqXHR.status + "): ";
-          errorString += (jqXHR.responseText === "") ? "" : (jQuery.parseJSON(jqXHR.responseText).message) ? jQuery.parseJSON(jqXHR.responseText).message : jQuery.parseJSON(jqXHR.responseText).error.message;
-          alert(errorString);
-      });
+            sendDataToCosmosDB(sourceImageUrl);
+        })
+        .fail(function (jqXHR, textStatus, errorThrown) {
+            var errorString = (errorThrown === "") ? "Error. " : errorThrown + " (" + jqXHR.status + "): ";
+            errorString += (jqXHR.responseText === "") ? "" : (jQuery.parseJSON(jqXHR.responseText).message) ? jQuery.parseJSON(jqXHR.responseText).message : jQuery.parseJSON(jqXHR.responseText).error.message;
+            alert(errorString);
+        });
     }
 </script>
 </body>
