--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@ Image to analyze: <input type="text" name="inputImage" id="inputImage"
     }
 
     function processImage() {
-        var subscriptionKey = "YOUR_FACE_API_SUBSCRIPTION_KEY"; // Replace with your Face API subscription key
-        var uriBase = "https://YOUR_FACE_API_ENDPOINT/face/v1.0/detect"; // Replace with your Face API endpoint
+        var subscriptionKey = "1c8a0938df024623a98b21251f299565";
+        var uriBase = "https://feelfinderai.cognitiveservices.azure.com/face/v1.0/detect";
 
         var params = {
             "detectionModel": "detection_03",
