--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ Image to analyze: <input type="text" name="inputImage" id="inputImage"
             });
 
             // Llamada para guardar en Cosmos DB
-            sendDataToCosmosDB(sourceImageUrl);
+            create(sourceImageUrl);
         })
         .fail(function (jqXHR, textStatus, errorThrown) {
             var errorString = (errorThrown === "") ? "Error. " : errorThrown + " (" + jqXHR.status + "): ";
