--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@ Image to analyze: <input type="text" name="inputImage" id="inputImage"
     async function listImages() {
         const query = `
         {
-            images {
+            people {
                 items {
                     id
-                    url
+                    Name
                 }
             }
         }`;
