--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ Image to analyze: <input type="text" name="inputImage" id="inputImage"
             html += "</ul>";
 
             
-            const peopleListElement = document.getElementById("peopleList");
+            const peopleListElement = document.getElementById("imageList");
             if (peopleListElement) {
                 peopleListElement.innerHTML = html;
             } else {
