--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 Enter the URL to an image that includes a face or faces, then click
 the <strong>Analyze face</strong> button.<br><br>
 Image to analyze: <input type="text" name="inputImage" id="inputImage"
-                         value="https://upload.wikimedia.org/wikipedia/commons/c/c3/RH_Louise_Lillian_Gish.jpg"/>
+                         value="https://www.linguahouse.com/linguafiles/md5/d70f2b461a293bb128cabb384628342c"/>
 <button onclick="processImage()">Analyze face</button><br><br>
 <div id="wrapper" style="width:1020px; display:table;">
     <div id="jsonOutput" style="width:600px; display:table-cell;">
